--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "uploadthing": "^5.5.2",
     "uuid": "^9.0.0",
     "zod": "^3.22.2",
-    "zustand": "^4.4.1"
+    "zustand": "^4.4.1",
+    "@vercel/analytics": "^1.1.1"
   },
   "devDependencies": {
     "@types/uuid": "^9.0.3",
